--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -192,3 +192,6 @@ Custom Css
 .table-border {
   border-bottom: 0.5px solid #cde5d3!important;
 }
+.font-size-18-px {
+  font-size: 18px!important;;
+}
