--- a/app/views/layouts/partials/_advertising_product.html.erb
+++ b/app/views/layouts/partials/_advertising_product.html.erb
@@ -16,9 +16,9 @@
                     <% end %>
                 </li>
                 <li class="text-muted text-right">
-                    $<%= product.sell_price * (1 - product.product_discount / 100) %>                 
+                    <%= number_with_precision(product.sell_price * (1 - product.product_discount / 100), precision: 0) %> VND             
                     <% unless product.product_discount == 0 %>
-                        &nbsp;&nbsp;&nbsp;<s>$<%= product.sell_price %></s>
+                        &nbsp;&nbsp;&nbsp;<s><%= number_with_precision(product.sell_price, precision: 0) %></s> VND
                     <% end %>           
                 </li>
             </ul>
