--- a/app/views/layouts/partials/_product.html.erb
+++ b/app/views/layouts/partials/_product.html.erb
@@ -40,9 +40,9 @@
                 </li>
             </ul>
             <p class="text-center mb-0">
-                $<%= product.sell_price * (1 - product.product_discount / 100) %>                 
+                <%= number_with_precision(product.sell_price * (1 - product.product_discount / 100), precision: 0) %> VND            
                 <% unless product.product_discount == 0 %>
-                    &nbsp;&nbsp;&nbsp;<s>$<%= product.sell_price %></s>
+                    &nbsp;&nbsp;&nbsp;<s><%= number_with_precision(product.sell_price, precision: 0) %></s> VND
                 <% end %> 
             </p>
         </div>
