--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
     <%= render partial: 'layouts/partials/top_nav' %>
     <%= render partial: 'layouts/partials/header' %>
     <%= render partial: 'layouts/partials/sign_in' %>
+    <%= render partial: 'layouts/partials/sign_up' %>
 
     <%= yield %>
 
