--- a/app/views/layouts/partials/_sign_in.html.erb
+++ b/app/views/layouts/partials/_sign_in.html.erb
@@ -51,7 +51,7 @@
                 </a>
               </div>
               <div class="form-check mt-3 mb-3 text-center">
-                <label>Not a member? <a onclick="open_sign_up()" class="text-decoration-none cursor-pointer text-right">Create a account</a></label>                              
+                <label>Not a member? <a href="<%= new_user_registration_path %>" class="text-decoration-none cursor-pointer text-right">Create a account</a></label>                              
               </div>
             </form>
 
