--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,17 @@
 <% if resource.errors.any? %>
   <div id="error_explanation">
+  
+  <% if false %>
     <h2>
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
-    <ul>
+  <% end %>
+    <div class="form-floating mb-3">
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <div class="row mx-1 text-danger"><%= message %></div>
       <% end %>
     </ul>
   </div>
