--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     <%= render partial: 'layouts/partials/top_nav' %>
     <%= render partial: 'layouts/partials/header' %>
     <%= render partial: 'layouts/partials/sign_in' %>
-
+    <%= render partial: 'layouts/partials/notice_alert_devise' %>
     <%= yield %>
 
     <%= render partial: 'layouts/partials/footer' %>
