--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -66,9 +66,9 @@
                 <div class="card">
                     <div class="card-body">
                         <h1 class="h2 font-weight-400"><%= @product.product_name %></h1>
-                        <p class="h3"><%= number_with_precision(@product.sell_price * (1 - @product.product_discount / 100), precision: 0) %> VND
+                        <p class="h3"><%= number_to_currency(@product.sell_price * (1 - @product.product_discount / 100), precision: 2) %>
                             <% unless @product.product_discount == 0 %>
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<s><%= number_with_precision(@product.sell_price, precision: 0) %> VND</s>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<s><%= number_to_currency(@product.sell_price, precision: 2) %></s>
                             <% end %>
                         </p>
                         <p>
@@ -77,7 +77,7 @@
                                 <i id="product-star-rate-<%= index %>" class="text-warning fa fa-star"></i>
                                 <% index += 1 %>            
                             <% end %>            
-                            <% if @product.score_rating - @product.score_rating.to_i > 0.5 %>
+                            <% if @product.score_rating - @product.score_rating.to_i >= 0.5 %>
                                 <i id="product-star-rate-<%= index %>" class="text-warning fa fa-star-half"></i> 
                                 <% index += 1 %>        
                             <% end %>
