--- a/app/views/layouts/partials/_confirm_order_information.html.erb
+++ b/app/views/layouts/partials/_confirm_order_information.html.erb
@@ -50,7 +50,7 @@
                     <input id="coupon" type="text" class="form-control" placeholder="Enter coupon code">
                 </div>
                 <div class="col-md-2">
-                    <a onclick="apply_coupon()" class="btn btn-success">Apply coupon</a>
+                    <a onclick="apply_coupon()" id="apply-coupon" class="btn btn-success">Apply coupon</a>
                 </div>
                 <div id="coupon-notification" class="col-md-4">                   
                 </div>     
