--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -198,3 +198,10 @@ Custom Css
 .list-style-type-none {
   list-style-type: none !important;
 }
+.position-relative {
+  position: relative!important;
+}
+.star-half-decoration {
+  position: absolute !important;
+  top: 4px!important;
+}
