--- a/app/views/layouts/partials/_categories.html.erb
+++ b/app/views/layouts/partials/_categories.html.erb
@@ -10,19 +10,20 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-4 p-5 mt-3">
-            <%= link_to image_tag('men-sport.jpeg', class: 'rounded-circle img-fluid border'), home_index_path %>
+            <%= link_to image_tag('men-sport.jpeg', class: 'rounded-circle img-fluid border'), shop_index_path %>
             <h5 class="text-center mt-3 mb-3">Men</h5>
-            <p class="text-center"><%= link_to 'Go Shop', home_index_path , class: 'btn btn-success' %></p>
         </div>
         <div class="col-12 col-md-4 p-5 mt-3">
-            <%= link_to image_tag('women-sport.jpeg', class: 'rounded-circle img-fluid border'), home_index_path %>
+            <%= link_to image_tag('women-sport.jpeg', class: 'rounded-circle img-fluid border'), shop_index_path %>
             <h2 class="h5 text-center mt-3 mb-3">Women</h2>
-            <p class="text-center"><%= link_to 'Go Shop', home_index_path , class: 'btn btn-success' %></p>
+
         </div>
         <div class="col-12 col-md-4 p-5 mt-3">
-            <%= link_to image_tag('kid-sport.jpeg', class: 'rounded-circle img-fluid border'), home_index_path %>
+            <%= link_to image_tag('kid-sport.jpeg', class: 'rounded-circle img-fluid border'), shop_index_path %>
             <h2 class="h5 text-center mt-3 mb-3">Kid</h2>
-            <p class="text-center"><%= link_to 'Go Shop', home_index_path , class: 'btn btn-success' %></p>
+        </div>
+        <div class="col-12 col-md-12 text-center">
+            <p class="text-center"><%= link_to 'Go Shop', shop_index_path , class: 'btn btn-success' %></p>
         </div>
     </div>
 </section>
