--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -8,7 +8,7 @@
                 <ul class="list-unstyled text-light footer-link-list">
                     <li>
                         <i class="fas fa-map-marker-alt fa-fw"></i>
-                        <%= link_to 'HCMC National University Dormitory Zone B', 'https://www.google.com/maps/place/K%C3%BD+t%C3%BAc+x%C3%A1+Khu+B+%C4%90%E1%BA%A1i+h%E1%BB%8Dc+Qu%E1%BB%91c+gia+TP.HCM/@10.8820431,106.7825789,15z/data=!4m5!3m4!1s0x0:0x54542761d4c22175!8m2!3d10.8820431!4d106.7825789', class: 'text-decoration-none' %>
+                        <%= link_to 'HCMC National University Dormitory Zone B', 'https://www.google.com/maps/place/K%C3%BD+t%C3%BAc+x%C3%A1+Khu+B+%C4%90%E1%BA%A1i+h%E1%BB%8Dc+Qu%E1%BB%91c+gia+TP.HCM/@10.8820431,106.7825789,15z/data=!4m5!3m4!1s0x0:0x54542761d4c22175!8m2!3d10.8820431!4d106.7825789', class: 'text-decoration-none', target: '_blank' %>
                     </li>
                     <li>
                         <i class="fa fa-phone fa-fw"></i>
@@ -25,12 +25,9 @@
                 <h2 class="h2 text-light border-bottom pb-3 border-light">Products</h2>
                 <ul class="list-unstyled text-light footer-link-list">              
                     <li><%= link_to 'Coupons', coupons_path, class: 'text-decoration-none' %></li>
-                    <li><%= link_to 'Sport Wear', '#', class: 'text-decoration-none' %></li>
-                    <li><%= link_to 'Men\'s Shoes', '#', class: 'text-decoration-none' %></li>
-                    <li><%= link_to 'Women\'s Shoes', '#', class: 'text-decoration-none' %></li>
-                    <li><%= link_to 'Popular Dress', '#', class: 'text-decoration-none' %></li>
-                    <li><%= link_to 'Gym Accessories', '#', class: 'text-decoration-none' %></li>
-                    <li><%= link_to 'Sport Shoes', '#', class: 'text-decoration-none' %></li>
+                    <li><%= link_to 'Men\'s Shoes', shop_index_path, class: 'text-decoration-none' %></li>
+                    <li><%= link_to 'Women\'s Shoes', shop_index_path, class: 'text-decoration-none' %></li>
+                    <li><%= link_to 'Kid\'s Shoes', shop_index_path, class: 'text-decoration-none' %></li>
                 </ul>
             </div>
 
